--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -21,16 +21,20 @@ http {
         listen 443 ssl;
 
         #root and index and server_name
-        root /var/www/html;
-        server_name 0.0.0.0;
+        root /var/www/wordpress;
+        server_name ffreze.42.fr;
         index index.php index.html index.htm;
 
         location / {
             try_files $uri $uri/ =404;
         }
-        # location ~ \.php$ {								# Pour toutes les requetes php
-        #     include snippets/fastcgi-php.conf;
-        #     fastcgi_pass wordpress:9000;				# Comment renvoyer les requetes php sur le port 9000
-        # }
+         location ~ \.php$ {
+            include fastcgi_params;
+            fastcgi_pass wordpress:9000;
+            fastcgi_index index.php;
+            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            fastcgi_read_timeout 60;
+}
+
     }  
 }
