--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,5 +1,69 @@
 services:
   nginx:
-    build: "./requirements/nginx"
+    container_name: nginx
+    volumes:
+      - wordpress:/var/www/wordpress
+    networks:
+      - inception
+    depends_on:
+      - wordpress
+    build:
+      context: requirements/nginx
+      dockerfile: Dockerfile
+    env_file:
+      - .env
     ports:
-      - "443:443"
+      - 443:443
+    restart: on-failure
+  
+  mariadb:
+    container_name: mariadb
+    build: "./requirements/mariadb"
+    ports:
+      - "3306:3306"
+    networks:
+      - inception
+    environment:
+      SQL_ROOT_PASSWORD:
+      SQL_DATABASE:
+      SQL_USER:
+      SQL_PASSWORD:
+    volumes:
+      - mariadb:/var/lib/mysql
+      - .env:/etc/environment 
+    restart: unless-stopped
+  
+  wordpress:
+    container_name: wordpress
+    env_file: .env
+    volumes:
+      - wordpress:/var/www/wordpress
+    networks:
+      - inception
+    build:
+      context: requirements/wordpress
+      dockerfile: Dockerfile
+    depends_on:
+      - mariadb
+    restart: on-failure
+    expose:
+      - "9000"
+
+volumes:
+  wordpress:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/home/ffreze/Inception/srcs/wordpress'
+  
+  mariadb:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/home/ffreze/Inception/srcs/mariadb'
+
+networks:
+  inception:
+    driver: bridge
