Its working ? not totaly

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -21,12 +21,12 @@ http {
         listen 443 ssl;
 
         #root and index and server_name
-        root /var/www/wordpress;
+        root /var/www/html;
         server_name ffreze.42.fr;
         index index.php index.html index.htm;
 
-        location / {
-            try_files $uri $uri/ =404;
+       location / {
+        try_files $uri $uri/ /index.php?$args;
         }
          location ~ \.php$ {
             include fastcgi_params;
@@ -34,7 +34,7 @@ http {
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_read_timeout 60;
-}
+        }
 
     }  
 }
