--- a/srcs/.env
+++ b/srcs/.env
@@ -1,15 +1,17 @@
-# Project Name
 COMPOSE_PROJECT_NAME=monfiac
 
 SQL_ROOT_PASSWORD=root_password
 SQL_DATABASE=wordpress
-SQL_USER=wordpress_user
+SQL_USER=wordpress
 SQL_PASSWORD=wordpress_password
 
-WORDPRESS_DB_HOST=mariadb:3306
+WORDPRESS_DB_HOST=mariadb
 WORDPRESS_DB_NAME=wordpress
-WORDPRESS_DB_USER=wordpress_user
+WORDPRESS_DB_USER=wordpress
 WORDPRESS_DB_PASSWORD=wordpress_password
+
+WORDPRESS_ADMIN=ffreze
+WORDPRESS_ADMIN_MAIL=ffreze@student.42lyon.fr
 
 NGINX_HOST=ffreze.42.fr
 NGINX_PORT=443
