--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,21 +1,24 @@
 FROM debian:oldstable
-RUN apt update -y
-RUN apt upgrade -y
-RUN apt-get -y install wget
-RUN apt-get install -y php7.3\
-						php-fpm\
-						php-mysql\
-						mariadb-client
-RUN wget https://fr.wordpress.org/wordpress-6.0-fr_FR.tar.gz -P /var/www
-RUN cd /var/www && tar -xzf wordpress-6.0-fr_FR.tar.gz && rm wordpress-6.0-fr_FR.tar.gz
-RUN	chown -R root:root /var/www/wordpress
-RUN mkdir -p /run/php
-RUN	chown -R www-data:www-data /run/php
-RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-RUN chmod +x wp-cli.phar
-RUN mv wp-cli.phar /usr/local/bin/wp
-COPY conf/config-wp.sh /etc/wordpress/config-wp.sh
+
+RUN apt-get update
+RUN apt-get upgrade -y
+
+RUN apt-get install -y --no-install-recommends \
+        wordpress \
+        php-cli \
+        php-mysql \
+        php-fpm \
+        curl
+
+RUN mkdir /run/php/
+RUN chown -R www-data:www-data /run/php/
+
+COPY conf/config-wp.sh /usr/local/bin/
 COPY conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
-RUN chmod +x /etc/wordpress/config-wp.sh
-ENTRYPOINT [ "/etc/wordpress/config-wp.sh" ]
+
+RUN chmod +x /usr/local/bin/config-wp.sh
+
+EXPOSE 9000
+
+ENTRYPOINT [ "/usr/local/bin/config-wp.sh" ]
 CMD [ "php-fpm7.4", "-F" ]
