--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -3,7 +3,8 @@ FROM debian:oldstable
 
 # Install MariaDB
 RUN apt update -y && apt upgrade -y
-RUN apt install mariadb-server -y
+RUN apt-get install -y --no-install-recommends mariadb-server
+RUN mkdir /run/mysqld/ && chown -R mysql:mysql /run/mysqld/
 
 # Copy Configuration and Script
 COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
