--- a/srcs/.env
+++ b/srcs/.env
@@ -5,7 +5,7 @@ SQL_DATABASE=wordpress
 SQL_USER=wordpress
 SQL_PASSWORD=wordpress_password
 
-WORDPRESS_DB_HOST=mariadb
+WORDPRESS_DB_HOST=mariadb:3306
 WORDPRESS_DB_NAME=wordpress
 WORDPRESS_DB_USER=wordpress
 WORDPRESS_DB_PASSWORD=wordpress_password
