--- a/srcs/requirements/mariadb/conf/50-server.cnf
+++ b/srcs/requirements/mariadb/conf/50-server.cnf
@@ -1,6 +1,7 @@
 [mysqld]
+pid-file = /run/mysqld/mysqld.pid
+socket = /run/mysqld/mysqld.sock
 datadir = /var/lib/mysql
-socket  = /run/mysqld/mysqld.sock
-bind_address=*
-port = 3306
-user = mysql
+bind-address = 0.0.0.0
+skip-host-cache
+skip-name-resolve
