--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -4,7 +4,9 @@ RUN apt upgrade -y
 RUN apt install -y \
     nginx \
     vim   \
-    curl 
+    curl \
+    sendmail \
+    sendmail-bin
 RUN mkdir -p /etc/nginx/ssl
 RUN apt install openssl -y
 RUN openssl req -x509 -nodes \
