--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -25,16 +25,22 @@ http {
         server_name ffreze.42.fr;
         index index.php index.html index.htm;
 
-       location / {
-        try_files $uri $uri/ /index.php?$args;
+        location / {
+            try_files $uri $uri/ /index.php?$args;
         }
-         location ~ \.php$ {
-            include fastcgi_params;
-            fastcgi_pass wordpress:9000;
-            fastcgi_index index.php;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_read_timeout 60;
+        location ~ \.php$ {
+            include			snippets/fastcgi-php.conf;
+            fastcgi_pass	wordpress:9000;
+            # include fastcgi_params;
+            # fastcgi_pass wordpress:9000;
+            # fastcgi_index index.php;
+            # fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+            # fastcgi_read_timeout 60;
+        }
+        location /wp-includes/js/ {
+            expires max;
+            add_header Cache-Control "public, must-revalidate, proxy-revalidate";
         }
 
-    }  
+    }
 }
